# Temporal-Multi-Document-Summarizer

./: .gitignore  README.md  pyproject.toml  requirements-locked-tei2go.txt
data/processed/: EnglishNIVJohn43_PW.annot.xml  EnglishNIVLuke42_PW_TEI2GO.xml  EnglishNIVMark41_PW_TEI2GO.xml  EnglishNIVMatthew40_PW_TEI2GO.xml
src/temporal_annotator/: annotatorMVP.py  quicktest.py  utils.py
